# VisionLLM_InteractionAnalysis

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: model.yaml  schema.yaml
notebook/: 01_visionllm_interaction.ipynb
visionllm_interaction/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
visionllm_interaction/constants/training_pipeline/: __init__.py
visionllm_interaction/entity/: artifact_entity.py  config_entity.py
visionllm_interaction/utils/: main_utils.py  ml_utils.py
